java/src/main/native/unitsync_api.h


EXPORT(const char* ) GetNextError();
EXPORT(const char* ) GetSpringVersion();
EXPORT(const char* ) GetSpringVersionPatchset();
EXPORT(bool        ) IsSpringReleaseVersion();
EXPORT(int         ) Init(bool isServer, int id);
EXPORT(void        ) UnInit();
EXPORT(const char* ) GetWritableDataDirectory();
EXPORT(int         ) GetDataDirectoryCount();
EXPORT(const char* ) GetDataDirectory(int index);
EXPORT(int         ) ProcessUnits();
EXPORT(int         ) ProcessUnitsNoChecksum();
EXPORT(int         ) GetUnitCount();
EXPORT(const char* ) GetUnitName(int unit);
EXPORT(const char* ) GetFullUnitName(int unit);
EXPORT(void        ) AddArchive(const char* archiveName);
EXPORT(void        ) AddAllArchives(const char* rootArchiveName);
EXPORT(void        ) RemoveAllArchives();
EXPORT(unsigned int) GetArchiveChecksum(const char* archiveName);
EXPORT(const char* ) GetArchivePath(const char* archiveName);
EXPORT(int         ) GetMapCount();
EXPORT(const char* ) GetMapName(int index);
EXPORT(const char* ) GetMapFileName(int index);
EXPORT(const char* ) GetMapDescription(int index);
EXPORT(const char* ) GetMapAuthor(int index);
EXPORT(int         ) GetMapWidth(int index);
EXPORT(int         ) GetMapHeight(int index);
EXPORT(int         ) GetMapTidalStrength(int index);
EXPORT(int         ) GetMapWindMin(int index);
EXPORT(int         ) GetMapWindMax(int index);
EXPORT(int         ) GetMapGravity(int index);
EXPORT(int         ) GetMapResourceCount(int index);
EXPORT(const char* ) GetMapResourceName(int index, int resourceIndex);
EXPORT(float       ) GetMapResourceMax(int index, int resourceIndex);
EXPORT(int         ) GetMapResourceExtractorRadius(int index, int resourceIndex);
EXPORT(int         ) GetMapPosCount(int index);
EXPORT(float       ) GetMapPosX(int index, int posIndex);
EXPORT(float       ) GetMapPosZ(int index, int posIndex);
EXPORT(float       ) GetMapMinHeight(const char* mapName);
EXPORT(float       ) GetMapMaxHeight(const char* mapName);
EXPORT(int         ) GetMapArchiveCount(const char* mapName);
EXPORT(const char* ) GetMapArchiveName(int index);
EXPORT(unsigned int) GetMapChecksum(int index);
EXPORT(unsigned int) GetMapChecksumFromName(const char* mapName);
EXPORT(int         ) GetInfoMapSize(const char* mapName, const char* name, int* width, int* height);
EXPORT(int         ) GetInfoMap(const char* mapName, const char* name, unsigned char* data, int typeHint);
EXPORT(int         ) GetSkirmishAICount();
EXPORT(int         ) GetSkirmishAIInfoCount(int index);
EXPORT(const char* ) GetInfoKey(int index);
EXPORT(const char* ) GetInfoType(int index);
EXPORT(const char* ) GetInfoValue(int index);
EXPORT(const char* ) GetInfoValueString(int index);
EXPORT(int         ) GetInfoValueInteger(int index);
EXPORT(float       ) GetInfoValueFloat(int index);
EXPORT(bool        ) GetInfoValueBool(int index);
EXPORT(const char* ) GetInfoDescription(int index);
EXPORT(int         ) GetSkirmishAIOptionCount(int index);
EXPORT(int         ) GetPrimaryModCount();
EXPORT(int         ) GetPrimaryModInfoCount(int index);
EXPORT(const char* ) GetPrimaryModName(int index);
EXPORT(const char* ) GetPrimaryModShortName(int index);
EXPORT(const char* ) GetPrimaryModVersion(int index);
EXPORT(const char* ) GetPrimaryModMutator(int index);
EXPORT(const char* ) GetPrimaryModGame(int index);
EXPORT(const char* ) GetPrimaryModShortGame(int index);
EXPORT(const char* ) GetPrimaryModDescription(int index);
EXPORT(const char* ) GetPrimaryModArchive(int index);
EXPORT(int         ) GetPrimaryModArchiveCount(int index);
EXPORT(const char* ) GetPrimaryModArchiveList(int archive);
EXPORT(int         ) GetPrimaryModIndex(const char* name);
EXPORT(unsigned int) GetPrimaryModChecksum(int index);
EXPORT(unsigned int) GetPrimaryModChecksumFromName(const char* name);
EXPORT(int         ) GetSideCount();
EXPORT(const char* ) GetSideName(int side);
EXPORT(const char* ) GetSideStartUnit(int side);
EXPORT(int         ) GetMapOptionCount(const char* mapName);
EXPORT(int         ) GetModOptionCount();
EXPORT(int         ) GetCustomOptionCount(const char* fileName);
EXPORT(const char* ) GetOptionKey(int optIndex);
EXPORT(const char* ) GetOptionScope(int optIndex);
EXPORT(const char* ) GetOptionName(int optIndex);
EXPORT(const char* ) GetOptionSection(int optIndex);
EXPORT(const char* ) GetOptionStyle(int optIndex);
EXPORT(const char* ) GetOptionDesc(int optIndex);
EXPORT(int         ) GetOptionType(int optIndex);
EXPORT(int         ) GetOptionBoolDef(int optIndex);
EXPORT(float       ) GetOptionNumberDef(int optIndex);
EXPORT(float       ) GetOptionNumberMin(int optIndex);
EXPORT(float       ) GetOptionNumberMax(int optIndex);
EXPORT(float       ) GetOptionNumberStep(int optIndex);
EXPORT(const char* ) GetOptionStringDef(int optIndex);
EXPORT(int         ) GetOptionStringMaxLen(int optIndex);
EXPORT(int         ) GetOptionListCount(int optIndex);
EXPORT(const char* ) GetOptionListDef(int optIndex);
EXPORT(const char* ) GetOptionListItemKey(int optIndex, int itemIndex);
EXPORT(const char* ) GetOptionListItemName(int optIndex, int itemIndex);
EXPORT(const char* ) GetOptionListItemDesc(int optIndex, int itemIndex);
EXPORT(int         ) GetModValidMapCount();
EXPORT(const char* ) GetModValidMap(int index);
EXPORT(int         ) OpenFileVFS(const char* name);
EXPORT(void        ) CloseFileVFS(int file);
EXPORT(int         ) ReadFileVFS(int file, unsigned char* buf, int numBytes);
EXPORT(int         ) FileSizeVFS(int file);
EXPORT(int         ) InitFindVFS(const char* pattern);
EXPORT(int         ) InitDirListVFS(const char* path, const char* pattern, const char* modes);
EXPORT(int         ) InitSubDirsVFS(const char* path, const char* pattern, const char* modes);
EXPORT(int         ) FindFilesVFS(int file, char* nameBuf, int size);
EXPORT(int         ) OpenArchive(const char* name);
EXPORT(int         ) OpenArchiveType(const char* name, const char* type);
EXPORT(void        ) CloseArchive(int archive);
EXPORT(int         ) FindFilesArchive(int archive, int file, char* nameBuf, int* size);
EXPORT(int         ) OpenArchiveFile(int archive, const char* name);
EXPORT(int         ) ReadArchiveFile(int archive, int file, unsigned char* buffer, int numBytes);
EXPORT(void        ) CloseArchiveFile(int archive, int file);
EXPORT(int         ) SizeArchiveFile(int archive, int file);
EXPORT(void        ) SetSpringConfigFile(const char* fileNameAsAbsolutePath);
EXPORT(const char* ) GetSpringConfigFile();
EXPORT(const char* ) GetSpringConfigString(const char* name, const char* defValue);
EXPORT(int         ) GetSpringConfigInt(const char* name, const int defValue);
EXPORT(float       ) GetSpringConfigFloat(const char* name, const float defValue);